@@ -163,11 +163,11 @@
 			<version>5.3.0</version>
 		</dependency>
 
-        <dependency>
+        <!-- <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
-        </dependency>
+        </dependency> -->
 
 		<!-- Apache HttpClient para EntityUtils y otras clases HTTP -->
 		<dependency>
@@ -190,11 +190,17 @@
 			<version>1.4</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.sun.xml.parsers</groupId>
 			<artifactId>jaxp-ri</artifactId>
 			<version>1.4.5</version>
-		</dependency>
+		</dependency> -->
+
+		<!-- <dependency>
+			<groupId>com.sun.xml.messaging.saaj</groupId>
+			<artifactId>saaj-impl</artifactId>
+			<version>3.0.0</version>
+		</dependency> -->
 		
 	</dependencies>
 
@@ -212,11 +218,6 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
             </plugin>
 			<plugin>
 				<groupId>org.jvnet.jaxb</groupId>
@@ -251,6 +252,40 @@
 						<version>4.0.2</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.4.1</version>
+				<executions>
+					<execution>
+						<id>run-envio</id>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>java</executable>
+							<arguments>
+								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</argument>
+								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED</argument>
+								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</argument>
+								<argument>--add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</argument>
+								<argument>--add-exports=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</argument>
+								<argument>-classpath</argument>
+								<classpath/>
+								<argument>SiiEnvio.EnviaDocumento</argument>
+								<argument>-c</argument>
+								<argument>cert.pfx</argument>
+								<argument>-s</argument>
+								<argument>contraseña</argument>
+								<argument>-f</argument>
+								<argument>60910000-1</argument>
+								<argument>envioprueba.xml</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
